Fix table font color in dark mode

--- a/resources/assets/sass/night.sass
+++ b/resources/assets/sass/night.sass
@@ -216,6 +216,9 @@ body.night
   .label-default
     background-color: #535353
 
+  .table
+    color: #CACACA
+
   .table tbody>tr>td, .table tbody>tr>th,
   .table tfoot>tr>td, .table tfoot>tr>th,
   .table thead>tr>td, .table thead>tr>th
